# TaskManager

./: .gitignore  CLAUDE.md  ISSUES.md  LICENSE  MILESTONES.md  README.md  ROADMAP.md  example.py  pyproject.toml
pythonTask/: task1.py  task2.py  task3.py
taskmanager/: __init__.py  asyncSubprocess.py  logging_system.py  manager.py  task.py
tests/: test_logging_system.py  test_smoke.py
