[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "taskmanager"
version = "0.1.0"
description = "A lightweight Python task queue for running local scripts and functions sequentially."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
dependencies = [
  "tqdm>=4.66",
  "rich>=13.0",
]

[tool.setuptools.packages.find]
include = ["taskmanager"]
